--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="home">Home</string>
     <string name="settings">Settings</string>
     <string name="carts">carts</string>
+    <string name="search_restaurants">Search </string>
 </resources>
